subindo meus projetos

--- a/tarefas-page/tarefas.html
+++ b/tarefas-page/tarefas.html
@@ -51,7 +51,7 @@
       
           <li><a href="/SliderImage/Slider.html" target="_blank">Image Carousel</a></li>
           <li><a href="/Relogio/relogio.html" target="_blank">Digital Clock</a></li>
-          <li><a href="/CadastroTimeFutebol/Time.html" target="_blank">Pokemon Searcher</a></li>
+          <li><a href="/pokemonSearcher/pokemon.html" target="_blank">Pokemon Searcher</a></li>
           <li><a href="/DoubleClickHeart/heart.html" target="_blank">Double Click Heart</a></li>
           <li><a href="/CadastroTimeFutebol/Time.html" target="_blank">Soccer Team Register</a></li>
           
@@ -69,7 +69,7 @@
 
         <ul>
 
-          <li><a href="./trabalho8/index.html" target="_blank">Marvel Universe By Rafael Botelho e Paulo Cesar </a></li>
+          <li><a href="/trabalho8/index.html" target="_blank">Marvel Universe By Rafael Botelho e Paulo Cesar </a></li>
           <li><a href="/Tarefas/Sharkpedia/shark.html" target="_blank">Sharkpédia (working)</a></li>
           <li><a href="#" target="_blank">Mania Retro Film (working)</a></li>
 
