--- a/DoubleClickHeart/heart.html
+++ b/DoubleClickHeart/heart.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--<title>Double Click For Heart</title>-->
-    <link rel="stylesheet" href="heart.css" />
+    <link rel="stylesheet" href="./heart.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
     
   
@@ -16,7 +16,7 @@
     </div>
 
 
-    <script src="/Tarefas/DoubleClickHeart/heart.js"></script> 
+    <script src="/DoubleClickHeart/heart.js"></script> 
   </body>
 </html>
 
