adding Weather Searcher

--- a/tarefas-page/tarefas.html
+++ b/tarefas-page/tarefas.html
@@ -54,7 +54,7 @@
           <li><a href="/pokemonSearcher/pokemon.html" target="_blank">Pokemon Searcher</a></li>
           <li><a href="/DoubleClickHeart/heart.html" target="_blank">Double Click Heart</a></li>
           <li><a href="/CadastroTimeFutebol/Time.html" target="_blank">Soccer Team Register</a></li>
-          
+          <li><a href="/weatherApp/weather.html" target="_blank">Wheater Searcher</a></li> 
         
         </ul>
 
