--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
     <div class="dropdownMenu">
       <li> <a href="https://api.whatsapp.com/send?phone=5521995952128">Contato</a></li>
-      <li> <a href="./Arquivos/pdf/Paulo Cesar Farias Junior - Curriculo.pdf">Curriculo</a></li>
+      <li> <a href="./arquivos/pdf/Paulo Cesar Farias Junior - Curriculo.pdf">Curriculo</a></li>
       <li>  <a href="https://www.linkedin.com/in/paulo-cesar-farias-junior-b76397249/">Linkedin</a></li>
       <li> <a href="https://github.com/paulocesarfariasjr">GitHub</a></li>
-      <li><a href="./Tarefas/Tarefas.html" class="actBtn">Projetos</a></li>
+      <li><a href="./tarefas-page/tarefas.html" class="actBtn">Projetos</a></li>
 
 
     </div>
