--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <ul class="links">
         <li> <a href="https://api.whatsapp.com/send?phone=5521995952128">Contato</a></li>
-        <li> <a href="./Arquivos/pdf/Paulo Cesar Farias Junior - Curriculo.pdf" download>Curriculo</a></li>
+        <li> <a href="./Arquivos/pdf/Paulo Cesar Farias Junior - Curriculo.pdf">Curriculo</a></li>
         <li>  <a href="https://www.linkedin.com/in/paulo-cesar-farias-junior-b76397249/"  target="_blank">Linkedin</a></li>
         <li> <a href="https://github.com/paulocesarfariasjr" target="_blank">GitHub</a></li>
       </ul>
