--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <ul class="links">
         <li> <a href="https://api.whatsapp.com/send?phone=5521995952128">Contato</a></li>
-        <li> <a href="./Arquivos/pdf/PauloCesarFariasJunior-Curriculo.pdf" target="_blank">Curriculo</a></li>
+        <li><a href="/arquivos/pdf/PauloCesarFariasJunior-Curriculo.pdf">Curriculo</a></li>
         <li>  <a href="https://www.linkedin.com/in/paulo-cesar-farias-junior-b76397249/"  target="_blank">Linkedin</a></li>
         <li> <a href="https://github.com/paulocesarfariasjr" target="_blank">GitHub</a></li>
       </ul>
@@ -41,7 +41,7 @@
 
     <div class="dropdownMenu">
       <li> <a href="https://api.whatsapp.com/send?phone=5521995952128">Contato</a></li>
-      <li> <a href="./arquivos/pdf/PauloCesarFariasJunior-Curriculo.pdf" target="_blank">Curriculo</a></li>
+      <li><a href="/arquivos/pdf/PauloCesarFariasJunior-Curriculo.pdf"></a>Curriculo</li>
       <li>  <a href="https://www.linkedin.com/in/paulo-cesar-farias-junior-b76397249/">Linkedin</a></li>
       <li> <a href="https://github.com/paulocesarfariasjr">GitHub</a></li>
       <li><a href="./tarefas-page/tarefas.html" class="actBtn">Projetos</a></li>
